# repro_bazel_17466

./: .bazelrc  BUILD  MODULE.bazel  README.md  test_on.bzl
tools/test/: BUILD.bazel  default_test_toolchain.bzl
