load(":default_test_toolchain.bzl", "bool_flag", "empty_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "default_test_toolchain_type",
    no_match_error = """By default, tests are executed on the first execution platform that \
matches all constraints specified by the target platform. Either register the target platform (or \
a platform with at least the same constraints) as an execution platform, or override the default \
behavior by registering a custom toolchain for \
@bazel_tools//tools/test:default_test_toolchain_type.""",
)

empty_toolchain(name = "empty_toolchain")


# A toolchain that forces the execution platform to satisfy all constraints
# specified by the target platform.
toolchain(
    name = "default_test_toolchain",
    toolchain_type = ":default_test_toolchain_type",
    use_target_platform_constraints = True,
    toolchain = ":empty_toolchain",
    visibility = ["//visibility:private"],
)
